--- a/gb/14/9/18/n4251380.md
+++ b/gb/14/9/18/n4251380.md
@@ -1,15 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wccaxy2110/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wccaxy2110/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wccaxy2110/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wccaxy2110/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wccaxy2110/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wccaxy2110/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>一个焦黑十字架的故事</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2014/09/1409290258191456-600x400.jpg" />
-<h6>图：2012年6月与当年卫护过我的老友重逢。左边是郎诺?迦纳﹝Ronald Garner﹞，右边是迈克?隆德﹝Michael Round﹞，三人都是白发一族了。（作者提供）
-</h6>
+
+<h6></h6>
 <hr>
 <p>【大纪元2014年09月18日讯】半个世纪以前的密西西比州</p>
 <p>
-	<figure id="attachment_5781920" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/09/141016000921909-600x450.jpg" alt="图：2012年6月，返密州访友，在密西西比州立大学的校门前留影，此门是我1971年毕业若干年后才建立的。（作者提供）" title="图：2012年6月，返密州访友，在密西西比州立大学的校门前留影，此门是我1971年毕业若干年后才建立的。（作者提供）" width="600" b="450"
-	class="size-large wp-image-5781920" /></a><figcaption class="wp-caption-text">图：2012年6月，返密州访友，在密西西比州立大学的校门前留影，此门是我1971年毕业若干年后才建立的。（作者提供）</figcaption></figure><br />在美国，像我这般年纪的华裔白发族，许多都是上个世纪的六、七十年代，从台湾随着留学潮，远渡重洋到新大陆来求学的学生。四、五十年后，当我们回忆起自己当年在美国各大学里的一些生活点滴时，一定会深刻记得当年在各地校园内澎湃汹涌的反越战示威。那时，我们这些外籍学生所需要面对与适应的，不只是语言上与生活上的差异，更被校园内的自由化风气感染。在那不受传统道德拘束，以做嘻皮﹝Hippie﹞为荣的世代，年轻人衣着新潮，我行我素，反抗权威。不少男孩念大学是为延缓兵役，有一些人为逃兵役，甚至于越过不设防的美、加边境，入籍为不需服兵役的加拿大人。那些年，在年轻人的社交领域里，没有抽过大麻烟的青少年，就如我们在台湾服兵役时不会抽烟的人一样，会被认为是太“娘”而遭同侪耻笑的。</p>
+	<figure id="attachment_5781920" aria-describedby="caption-attachment-5781920" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/09/141016000921909-600x450.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5781920" class="wp-caption-text">图：2012年6月，返密州访友，在密西西比州立大学的校门前留影，此门是我1971年毕业若干年后才建立的。（作者提供）</figcaption></figure><br />在美国，像我这般年纪的华裔白发族，许多都是上个世纪的六、七十年代，从台湾随着留学潮，远渡重洋到新大陆来求学的学生。四、五十年后，当我们回忆起自己当年在美国各大学里的一些生活点滴时，一定会深刻记得当年在各地校园内澎湃汹涌的反越战示威。那时，我们这些外籍学生所需要面对与适应的，不只是语言上与生活上的差异，更被校园内的自由化风气感染。在那不受传统道德拘束，以做嘻皮﹝Hippie﹞为荣的世代，年轻人衣着新潮，我行我素，反抗权威。不少男孩念大学是为延缓兵役，有一些人为逃兵役，甚至于越过不设防的美、加边境，入籍为不需服兵役的加拿大人。那些年，在年轻人的社交领域里，没有抽过大麻烟的青少年，就如我们在台湾服兵役时不会抽烟的人一样，会被认为是太“娘”而遭同侪耻笑的。</p>
 <p>在那个动荡不安的六、七十年代，美国社会上除了反战问题之外，还有严重的种族岐视问题。尤其是像我这样在号称是美国“极南”﹝Deep South的直译﹞的密西西比州求学的“有色人种”，还有更多的心理适应要做。其实“有色人种”一词是白人对非白人的蔑称，我不惜自贬身价引用这个名词，只是想反映当年美国南方社会的真实情况罢了。</p>
 <p>离开密州大许多年以后，我才听说下面这真实发生过的故事。一九六四年六月二十一日，密西西比州发生过一件耸人听闻的冷血谋杀案，有两位从纽约出发，到密州做民权义工的白人青年，与他们在当地雇用的一位黑人青年向导，被三K党的成员掳走，他们所驾的车虽然后来在荒郊野外被找到，但已遭焚毁。这三个人有如从人间蒸发，完全没了踪影。FBI由种种迹象显示，判定他们都已遭杀害。但是生要见人，死要见尸，不然无法结案。</p>
 <p>这案子的肇因是美国的自由派人士，看不惯在南北战争结束一百多年后，美国南方还在搞种族隔离，也就是种族歧视。甘迺迪总统上任后，就已推动民权法案，在法律上严禁任何形式的种族歧视，特别要求在选举时，黑人选民的一票得与白人选民的一票有相等效力。一九六三年十一月甘迺迪总统被刺后不久，继任的民主党詹森总统﹝Lyndon B. Johnson﹞与时任司法部长的罗勃甘迺迪﹝Robert F. Kennedy﹞，就秉承甘迺迪的遗志，积极推动这个法案，但是这民权法案在美国南部各州推动不易，因为内战后秘密成立的三K党，在美国南方党羽众多，他们威胁被压抑多年，本已十分胆小的黑人，不让他们登记为选民，还不时动用私刑﹝lynching﹞，公开以莫须有的罪名，吊死鼓动“选民登记”的黑人，这两位到密西西比州去做义工的白人青年，就是民权法案的忠实信徒与义工，冒险到美国“极南”来劝导胆小的黑人出去登记为选民，成了三K党眼中的“大逆不道”，亟欲除之而后快。即使两人处处小心翼翼，最后还是不幸双双在密西西比州遇害。</p>
@@ -17,8 +15,7 @@
 <p>经过月余的强力调查，这三人尸体虽暂时没找到，却意外在惨案发生地的纳宿巴郡﹝Neshoba County﹞发现七具前些日子失踪的黑人尸骸，都是遭私刑﹝Lynch﹞处死的。可以想见当年三K党在密西西比州之猖狂。</p>
 <p>这个案件于当年八月四日总算是得到重大突破，一个三K党的成员，为要得到三万美元的奖金而告密，指引FBI干员，在一个正在兴建中的小型拦水土坝的数十呎深的坝基下，挖出三人尸体。凶手数人﹝其中居然还有身为警察者﹞捕获后，依美国联邦宪法，交给密西西比州的司法单位审判。不料密州地方法院以罪证不足为由，延宕两年后，竟判凶手们悉数无罪，正义显然没能伸张。不仅在当年是轰动一时的奇案，在二十一世纪的今天，也是密西西比州的一般白人居民，被美国其他各州人民视为“异类”的主要原因。就在2012年的元月，卸任的密西西比州州长哈雷?巴博﹝Haley Barbour﹞还干了一件匪夷所思的事，他利用州长特权，在任期届满离职的前一天，颁令特赦了一百多名重刑犯，其中不乏犯抢劫杀人，强奸杀人等死罪的，与性侵儿童的屡犯等以无期徒刑定罪服刑的。这些被特赦的重刑犯，绝大多数是白人，这更引起美国全国人民之忿怒。真没想到，在二十一世纪的今天，居然还有这等司法怪事在美国的密西西比州发生。</p>
 <p>
-	<figure id="attachment_5781933" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/09/141016001039909-600x450.jpg" alt="图：这就是被我们老中们当年打闹过的密州大摩尔楼﹝Moore Hall﹞门口，如今内部已被改造成办公室了﹝摄于2012年6月﹞。（作者提供）" title="图：这就是被我们老中们当年打闹过的密州大摩尔楼﹝Moore Hall﹞门口，如今内部已被改造成办公室了﹝摄于2012年6月﹞。（作者提供）" width="600" b="450"
-	class="size-large wp-image-5781933" /></a><figcaption class="wp-caption-text">图：这就是被我们老中们当年打闹过的密州大摩尔楼﹝Moore Hall﹞门口，如今内部已被改造成办公室了﹝摄于2012年6月﹞。（作者提供）</figcaption></figure><br />在密州大的日子</p>
+	<figure id="attachment_5781933" aria-describedby="caption-attachment-5781933" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/09/141016001039909-600x450.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5781933" class="wp-caption-text">图：这就是被我们老中们当年打闹过的密州大摩尔楼﹝Moore Hall﹞门口，如今内部已被改造成办公室了﹝摄于2012年6月﹞。（作者提供）</figcaption></figure><br />在密州大的日子</p>
 <p>我于一九六九年八月负笈新大陆，当时我有三张入学许可证，分别是德州农工大学，犹他大学与密西西比州立大学﹝Mississippi State University﹞。大概是觉得“密西西比”这名字特别响亮，没有多加思考，就这么糊里糊涂的选了密西西比州立大学就读。</p>
 <p>开学头一天的新生训练中，外籍学生顾问休斯博士﹝Dr. Hughes﹞开宗明义的与我们外籍新生约法三章。首先是建议我们住校的外籍学生不要单独离开校园，即使是结伴出校园，也要让留在校园内的朋友们知道去处以及预估何时返回宿舍。再者，假日结伴出游时，尤其是开车去纽奥尔良市﹝New Orleans，离密州大校园约三小时车程﹞游玩，要尽量绕开捷径上正南方不到三十英哩的纳宿巴郡。还有，在公路上开车若是见到后面有警车打开闪光灯追赶，千万别依惯例立即停下，尤其是晚上，要一直开到灯火辉煌且人多的地方再停。万一真的发生变故，至少还留下几个人证。我后来才知道，那遇害三人就是在路过纳宿巴郡时，三K党成员驾驶警车，打开闪光灯在后面追赶，让三人误以为是警察的例行拦检，主动停下车子来受检，这样才被抓去而遇害的。</p>
 <p>刚到美国，一般生活还没适应，环境也没有摸熟，那儿会去质疑学校当局怎么会有这么奇特的规定，还误以为这是校规，是每一位学生都得要遵守的。其实当年我们出校园的机会也不多，没有感觉到这“约法三章”有什么不方便的。在校的教职员与美国同学，对那件发生在五年前的惨案也都只字不提，我在台湾时更是从未听说过，所以完全没有任何戒心。</p>
@@ -30,8 +27,7 @@
 <p>密西西比州的哥伦巴斯市当时人口可能只有五、六万，但是军人绝对占了一半，原来此处是美国空军B-52轰炸机飞行员的唯一训练基地。那时正值越战期间，到处可见穿着空军制服的军人。历史悠久的密州女子学院﹝始建于1884年，原名Mississippi State College for Women，现已改名为密州女大 Mississippi University for Women﹞的校区亦在此。总体而言，哥伦巴斯市是个典型的南方小镇，民风虽纯朴，却是极端保守的。</p>
 <p>密契尔工程公司当时的员工，应该至少有两百多人，除了不到三十位在办公室工作的“白领人员”外，其余都是在仓库与工地的“蓝领人员”。在公司的蓝领人员中可能有极少数的“有色人种”，事隔四十多年，我已全无印象。但是在办公室工作的白领人员里，我确定我是唯一的“有色人种”。事后才知道，我还是密契尔工程公司有史以来的第一个“有色白领人员”。</p>
 <p>
-	<figure id="attachment_5781945" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/09/1409290258161456-600x450.jpg" alt="图：就是这家史达克维尔镇上的老电影院，四十多年前还是搞“黑白分座”的。这是我2012年6月重游旧地时的照片。（作者提供）" title="图：就是这家史达克维尔镇上的老电影院，四十多年前还是搞“黑白分座”的。这是我2012年6月重游旧地时的照片。（作者提供）" width="600" b="450"
-	class="size-large wp-image-5781945" /></a><figcaption class="wp-caption-text">图：就是这家史达克维尔镇上的老电影院，四十多年前还是搞“黑白分座”的。这是我2012年6月重游旧地时的照片。（作者提供）</figcaption></figure><br />在美国的第一份工作</p>
+	<figure id="attachment_5781945" aria-describedby="caption-attachment-5781945" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/09/1409290258161456-600x450.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5781945" class="wp-caption-text">图：就是这家史达克维尔镇上的老电影院，四十多年前还是搞“黑白分座”的。这是我2012年6月重游旧地时的照片。（作者提供）</figcaption></figure><br />在美国的第一份工作</p>
 <p>我的工作是在建筑设计室当制图员，这与我在学校所专攻的“电机工程”几乎是完全不相关的。唯一勉强沾个边的，是我在工学院大一时，修过一整年的工程制图，画工程图，写中规中矩的工程字。面试后决定雇用我的是建筑设计室的经理迈克?隆德﹝Michael Round﹞，另外还有两位制图员，郎诺?迦纳﹝Ronald Garner﹞与丹尼斯?威克森﹝Dennis Wixon﹞。除了丹尼斯大约是三十好几岁，其他三人，包括我在内，都是二十多岁的年轻人。其中只有我不是学建筑的，他们三人则都是正规建筑科班出身。</p>
 <p>记忆中，我的月薪好像是五佰元，扣所得税以后，每半个月可以拿到一张两佰元出头的支票，美国南方生活程度低，除了前段提到的食与住之外，行的方面，一加仑汽油才两毛五而已。对我而言，这差事是比在餐馆洗盘子要强多了。工作上，经他们三人稍加指点，一个礼拜以后，我就已可以独立作业，开始设计那规格不一，但是不必绞尽脑汁去做“研发”的铁皮屋了。</p>
 <p>我在密州大主攻的是电机系领域里的人工智慧﹝Artificial Intelligence﹞，比较起来，这制图员工作确实是“单调且乏味”。但无论这工作有多“单调”、“乏味”，看在薪水的份上，我还是兢兢业业的努力以赴。早八晚五的工作时间，我把它stretch成早上七点四十五就踏入办公室，下午也工作到停车场里只剩下寥寥几部车时才离开。勤奋工作是有回报的，办公室里的三个人都对我很照应。</p>
@@ -64,8 +60,7 @@
 <p>还没等我通报自己姓名，电话那头传来郎诺兴奋的声音：“你肯定是Shing Chang无疑。这些年来，我一直在想，你怎么会消失得无影无踪呢。”他居然还记得我那时候用的是中文直译名。其实为了给洋人方便，我早已在户籍与驾驶执照上加上了洋名Rick，难怪他在网上找不到我。</p>
 <p>从郎诺那儿得知迈克四十多来一直留在密契尔工程公司，现在已是公司的副总裁。郎诺则早已离开密契尔公司自行创业，在家乡图柏罗市﹝Tupelo，Mississippi也就是猫王的出生地与成长故乡﹞开了一间小型工程顾问公司，专替顾客做建筑与室内装潢设计，商誉还不错的样子。</p>
 <p>2012年夏天某日，冒着酷暑，我开了八小时的车，由德州赶去密州哥伦巴斯市，在哥市的一间餐馆里，与事先联络好了的郎诺与迈克见了面﹝丹尼斯已找不到了﹞。三人都已成了灰发族，腰围也增大了好几吋，我们也都已升格为祖父了。当面谢过他们四十年前的照应，总算是了结我二十年来萦绕心头的一件事。</p>
-<figure id="attachment_5781958" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2014/09/1409290258191456-600x427.jpg" alt="图：2012年6月与当年卫护过我的老友重逢。左边是郎诺?迦纳﹝Ronald Garner﹞，右边是迈克?隆德﹝Michael Round﹞，三人都是白发一族了。（作者提供）" title="图：2012年6月与当年卫护过我的老友重逢。左边是郎诺?迦纳﹝Ronald Garner﹞，右边是迈克?隆德﹝Michael Round﹞，三人都是白发一族了。（作者提供）" width="600" b="427"
-	class="size-large wp-image-5781958" /></a><figcaption class="wp-caption-text">图：2012年6月与当年卫护过我的老友重逢。左边是郎诺?迦纳﹝Ronald Garner﹞，右边是迈克?隆德﹝Michael Round﹞，三人都是白发一族了。（作者提供）</figcaption></figure>
+<figure id="attachment_5781958" aria-describedby="caption-attachment-5781958" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2014/09/1409290258191456-600x427.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-5781958" class="wp-caption-text">图：2012年6月与当年卫护过我的老友重逢。左边是郎诺?迦纳﹝Ronald Garner﹞，右边是迈克?隆德﹝Michael Round﹞，三人都是白发一族了。（作者提供）</figcaption></figure>
 <p>我的感想</p>
 <p>我相信人的一生中，一定都至少有一、两件事情是让他感动一辈子的，也会有一些“贵人”是在他的困境中对他伸出援手的。对自己施过恩的人是否会“望报”并不重要，重要地是“受恩”的人绝不能事过境迁就把它给淡忘了。一个由“施恩”与“感恩”的人组成的社会，将会是一个非常和睦的社会，也会更接近于“礼运大同篇”所描述的，有中华民族特色的一个理想社会。</p>
 <p>三K党是美国极少数的“白人至上主义者”团体，他们假上帝之名，行仇恨之实。自美国黑奴解放战争结束后，一些南方地主不甘自己拥有农奴之权益受损，私下成立这个既非法又邪恶的地下组织。他们不只残酷的对付“有色人种”，也严厉制裁同情“有色人种”的白人。时至今日，他们在美国南方各州还没绝迹，就在前几年，我开车路经嘉伦市﹝Garland, Texas﹞一个越华聚居的商业地区时，还亲眼看见“光头党”的几个白人壮汉，嚣张的举着污辱亚裔的招牌，在红绿灯前散布仇恨传单呢！其实“假上帝之名，行仇恨之实”的团体，世界各国不胜枚举，一些激进回教份子不就正是如此吗？</p>
@@ -73,55 +68,54 @@
 <p>最近的一个例子，是佛罗里达州发生的一位名叫马丁的十七岁黑人少年，夜晚在一个主要是白人居住的社区里闲逛，与巡夜的义务社区巡逻员曾墨曼﹝白人与西语裔的混血，一般归类为白人﹞起了冲突，两人在扭打中曾墨曼居下风，被马丁骑在身上痛殴，脑袋也因被撞向水泥地而致头破血流，曾墨曼忿而拔出藏在股后的手枪，一枪就把马丁给当场击毙。虽然曾墨曼可说是“自卫”，但是当时马丁确实是手无寸铁的，这立刻就引起了全国性的黑人示威。在审判中，陪审团的决议是判曾墨曼被迫自卫杀人，当庭“无罪”开释，这自然又引发了更大规模的黑人暴动，闹得全国沸沸扬扬的。</p>
 <p>我想美国社会的种族纠纷，由于黑人的身份与地位之逐渐提高，随时会因黑人为要“伸张正义”而爆发出来。也有报导称，另一个少数族裔的西语裔，也极有可能在2020年之前，仅在德州的人口，就会超过全州人口的百分之五十。亚裔在这么复杂的“大熔炉”里，唯有力争上游，出人头地，才能让人刮目相看。好在这几十年来，我们这些亚裔“菁英”﹝以四十多年前的台湾为例，能有资格出国留学的学生，大部分是全国各大学毕业生中的佼佼者，当然都算是“菁英”啰！﹞逐渐在美国社会里的各行各业崭露头角，提升了当年以“苦力”身份来修筑铁路的华裔之低下地位。如今亚裔之年平均收入甚至高于白人了，所欠缺的是政治上的地位，但是这也在逐步改进中。</p>
 <p>如同黑人民权斗士金恩博士的“I have a dream???”，我也有这么一个梦想，期望我们下几代在美国成长的ABC们，会有一位脱颖而出，被选为美国总统呢！大家且拭目以待吧！</p>
-<p>【<ahref="https://github.com/wccaxy2110/djy/blob/master/gb/tag/%E8%B0%A2%E8%A1%8C%E6%98%8C.md#1">谢行昌</a>，2013年11月于美国德州】</p>
+<p>【<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B0%A2%E8%A1%8C%E6%98%8C.md#1">谢行昌</a>，2013年11月于美国德州】</p>
 <p>（责任编辑：李元）</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/3/22/n3828826.md#1">由WLW衍生的“想当年”</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/7/26/n4209696.md#1">记国府早期的军事留学生－－一段当年国军积极培植抗日战力的历史</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/9/18/n4251396.md#1">父亲艰辛的童年与他的怀乡诗作</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/1/30/n4355002.md#1">达城讲古－－“额上坟起”的钓鱼故事</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/1/30/n4355025.md#1">达城讲古－－理查逊市的点点滴滴</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/8/19/n4507483.md#1">达城讲古－－谈当年的食、住、与行</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/10/28/n4560320.md#1">达城讲古之四－－四十年前的达拉斯牛仔队</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/9/n11927453.md#1">春之魅力</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/2/24/n11892407.md#1">二月</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/3/22/n3828826.md#1">由WLW衍生的“想当年”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/7/26/n4209696.md#1">记国府早期的军事留学生－－一段当年国军积极培植抗日战力的历史</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/9/18/n4251396.md#1">父亲艰辛的童年与他的怀乡诗作</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/1/30/n4355002.md#1">达城讲古－－“额上坟起”的钓鱼故事</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/1/30/n4355025.md#1">达城讲古－－理查逊市的点点滴滴</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/8/19/n4507483.md#1">达城讲古－－谈当年的食、住、与行</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/10/28/n4560320.md#1">达城讲古之四－－四十年前的达拉斯牛仔队</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672607.md#1">珍惜时间 为自己活出璀璨人生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13671719.md#1">【战争随笔】文明下的废墟</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/4/n13416251.md#1">老天爷出考题：生命是一连串学习的过程</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/21/n11270152.md#1" target="_blank">中共暴政录：支持苏俄入侵中国的中东路事件</a></li><li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/11/14/n4573690.md#1" target="_blank">一位留美华裔女生绝处逢生的经历</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/12/n9951023.md#1" target="_blank">林辉：周恩来如此对待两位救命恩人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/19/n11666929.md#1" target="_blank">澳洲自由党参议员抨击中共野蛮强摘器官</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/27/n11981662.md#1">【文史】大难前如何避祸 埃及十灾给启示</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/29/n11985219.md#1">大疫下圣母玛利亚现身阿根廷天空？</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11990591.md#1">机会难得 美国专业摄影师协会免费网上教学</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/23/n11965516.md#1">【命理】为何算命师说他：死后方行好运享光彩？　</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/29/n11986117.md#1">轮回辗转 身前身后事茫茫</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/2/n11998786.md#1">【新闻看点】自诩“大国担当”中共须答7问</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/2/n11998644.md#1">【纪元播报】疫情压力测算 中共政权还能挺多久</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/2/n11998726.md#1">疫情下粮食涨价 中共越辟谣民众越抢购</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11992910.md#1">中国学者携带活病毒瓶进出美国海关</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995606.md#1">中国多地现抢米潮 当局“辟谣”难掩窘境</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11993872.md#1">【拍案惊奇】老任平安习总不妙？粮荒近逼全球</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11994892.md#1">疫情下 太阳马戏团裁员95% 可能申请破产</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11994398.md#1">防疫当前 洋女婿吴凤呼吁国际与台湾合作</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11996094.md#1">疫情下导演李安身处纽约 重回家庭煮夫生活</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995498.md#1">美剧《女超人》女星染疫 自曝藉呼吸机呼吸</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11991233.md#1">澳洲水族馆关闭 海狮充当游客在馆内趴趴走</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11990591.md#1">机会难得 美国专业摄影师协会免费网上教学</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/30/n11989588.md#1">吃肉强化免疫力 美专家4方法抵御病毒</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11991233.md#1">澳洲水族馆关闭 海狮充当游客在馆内趴趴走</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/3/31/n11992849.md#1">无症状感染者传染力不低 如何预防沉默传播？</a></li>
-<li><a href="https://github.com/wccaxy2110/djy/blob/master/gb/20/4/1/n11995936.md#1">纽约医师分享中共肺炎疗法 称0死亡0插管</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wccaxy2110/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wccaxy2110/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/9/18/n4251380.htm">一个焦黑十字架的故事</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/9/18/n4251380.htm">一个焦黑十字架的故事</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wccaxy2110/djy/blob/master/gb/14/9/18/n4251380.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wccaxy2110/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wccaxy2110/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wccaxy2110/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wccaxy2110/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/14/9/18/n4251380.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
